# axum-postgres-dynamic-params

./: Cargo.toml  README.md
src/: main.rs
