[package]
name = "axum-postgres-dynamic-params"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
axum = { git = "https://github.com/tokio-rs/axum" }
tokio-postgres = "0.7.7"
bb8 = "0.8"
bb8-postgres = "0.8.1"
axum-macros = { git = "https://github.com/tokio-rs/axum" }
